adds github url to paper

--- a/paper/rmcts.tex
+++ b/paper/rmcts.tex
@@ -208,6 +208,7 @@ But, more importantly, the network inferences for every node at a given depth sh
 at once, forming gigantic batches for efficient network inferences.
 The timings we report in \autoref{sec:timings} are based on such an iterative breadth-first implementation in C code.
 We also study the relative quality of \RMCTS vs \MCTS in \autoref{sec:quality_comparison}.
+An efficient implementation of \RMCTS is available at \url{github.com/bhoward73/rmcts}.
 
 %\subsection{Speed of \RMCTS}
 %    There are a couple reasons why \RMCTS is faster than \MCTS.
