--- a/paper/rmcts.tex
+++ b/paper/rmcts.tex
@@ -16,7 +16,7 @@
 \author{Keith Frankston}
 \address{Center for Communications Research, Institute for Defense Analyses\\
 Princeton, NJ 08540, USA}
-\email{kmwf1416@fastmail.fm}
+\email{k.frankston@fastmail.com}
 \email{k.frankston@idaccr.org}
 
 \author{Benjamin Howard}
@@ -26,6 +26,7 @@ Princeton, NJ 08540, USA}
 \email{bjhowa3@idaccr.org}
 
 \subjclass[2020]{cs.AI, cs.LG}
+
 \keywords{Monte Carlo Tree Search, MCTS, AlphaZero, regularized policy optimization}
 
 \DeclareMathOperator{\ucb}{ucb}
